# Gateway

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  RUNBOOK.md  deny.toml  rustfmt.toml
.cargo/: audit.toml
.config/: nextest.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  fullstack-e2e.yml  release.yml
audit/: README.md  STATE
audit/closed/: F-agentcancel-1.md  F-agentcfg-bounds-1.md  F-agentdos-1.md  F-agentjitter-1.md  F-agentliveness-1.md  F-agentlock-1.md  F-agentlog-1.md  F-agentlog-2.md  F-agentobs-1.md  F-agentsignal-1.md  F-bridge-backpressure-1.md  F-bridge-exitorder-1.md  F-bridge-output-teardown-1.md  F-bridgeoutcome-1.md  F-capgate-scp-1.md  F-capgate-unspec-1.md  F-cert-local-validation-1.md  F-cfg-1.md  F-channelcap-1.md  F-ci-1.md  F-config-validation-1.md  F-context-gatewayid-bind-1.md  F-core-1.md  F-coredump-1.md  F-coredump-privdrop-reset-1.md  F-cpauth-serial-1.md  F-cpdown-taxonomy-1.md  F-csr-cn-1.md  F-ctxsig-1.md  F-dep-1.md  F-dos-accept-1.md  F-drain-1.md  F-dualstack-1.md  F-epoch-1.md  F-failclosed-1.md  F-fwd-globalreq-wantreply-1.md  F-fwd-listener-count-1.md  F-fwd-local-pump-leak-1.md  F-fwd-reverse-accept-before-gate-1.md  F-fwd-reverse-expiry-1.md  (+84 more)
deploy/: Dockerfile  README.md
deploy/kubernetes/: gateway.yaml  networkpolicy.yaml
deploy/observability/: otel-collector-spanmetrics.yaml  prometheus-gateway-red-rules.yaml
deploy/systemd/: sessionlayer-gateway.service
docs/: addressing.md
gateway/: Cargo.toml
gateway-core/: Cargo.toml  build.rs
gateway-core/examples/: decrypt_recording.rs
gateway-core/src/: asyncio.rs  config.rs  cpauth.rs  decisionctx.rs  handshake.rs  health.rs  identity.rs  lib.rs  mtls.rs  netmatch.rs  secret.rs  signing.rs  telemetry.rs  tls.rs  version.rs
gateway-core/src/agent/: dial.rs  mod.rs  registry.rs  server.rs  stream.rs  testclient.rs  token.rs  wire.rs
gateway-core/src/ha/: connector.rs  coordination.rs  mod.rs  nats.rs  peer_client.rs  presence.rs  readiness.rs  relay_token.rs  token.rs
gateway-core/src/ssh/: bridge.rs  connector.rs  forward.rs  handler.rs  hostverify.rs  innerleg.rs  lockfeed.rs  locks.rs  mod.rs  outcome.rs  proxy.rs  proxyjump.rs  target.rs
gateway-core/src/ssh/recorder/: asciicast.rs  chain.rs  mod.rs  scp.rs  seal.rs  sftp.rs  upload.rs
gateway-core/tests/: access_model_expiry_it.rs  agent_e2e.rs  agent_transport_it.rs  breakglass_it.rs  controlmaster_it.rs  docker_e2e.rs  forward_e2e.rs  ha_e2e.rs  ha_instance_kill_it.rs  ha_relay_it.rs  identity_it.rs  idle_timeout_it.rs  inner_leg_it.rs  mtls_it.rs  native_recovery_it.rs  nats_it.rs  outer_leg_it.rs  proxy_it.rs  recorder_it.rs  session_end_it.rs  signing_it.rs  version.rs  wire_conformance.rs
gateway-core/tests/support/: docker.rs  mod.rs  sigv4.rs
gateway/src/: lib.rs  main.rs
gateway/src/hardening/: coredump.rs  landlock_fs.rs  mod.rs  privdrop.rs  seccomp.rs
gateway/tests/: hardening_e2e.rs
proto/sessionlayer/agent/v1/: wire.proto
proto/sessionlayer/controlplane/v1/: auth.proto  authz.proto  common.proto  handshake.proto  identity.proto  lock.proto  presence.proto  recording.proto  signing.proto
proto/sessionlayer/gateway/v1/: coordination.proto
proto/wire-conformance/: frames.json
scripts/: gate.sh  sync-contracts.sh  sync-testing.sh  vendor-contracts.sh
tests/fixtures/agent-node/: Dockerfile  entrypoint-agent.sh
tests/fixtures/ssh-client/: Dockerfile
tests/fixtures/sshd/: Dockerfile  entrypoint.sh  sshd_config
tests/fullstack/: README.md  infra-compose.yml  run.sh
tests/fullstack/agent-node/: Dockerfile  entrypoint.sh
tests/fullstack/config/: gateway-agent.json.tmpl  gateway-core.json.tmpl
tests/fullstack/pg-init/: 01-pgcrypto.sql
