[package]
name = "gateway-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "SessionLayer Gateway core: AsyncIo seam, CP handshake client, version/health surface (Session One scaffold)."

[lints]
workspace = true

[features]
default = []
# Opt-in io_uring reactor for the byte-copy hot path (Linux only). The epoll
# reactor stays the portable default and fallback. See src/asyncio.rs.
io-uring = ["dep:tokio-uring"]

[dependencies]
tonic = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
rustls = { workspace = true }
rcgen = { workspace = true }
russh = { workspace = true }
ssh-key = { workspace = true }
rand_core = { workspace = true }
fd-lock = { workspace = true }
zeroize = { workspace = true }
pem = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

# tokio-uring is Linux-only; keep it target-gated so the crate still builds on
# other platforms (the epoll fallback carries them).
[target.'cfg(target_os = "linux")'.dependencies]
tokio-uring = { version = "0.5", optional = true }

[build-dependencies]
tonic-prost-build = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tokio-stream = { workspace = true }
tonic = { workspace = true }
anyhow = { workspace = true }
# The in-process mock CP (integration tests) reuses the crypto stack to be a
# real internal mTLS CA (rcgen) and SSH session CA (ssh-key) signing genuine
# certs, and serves them over real TLS (rustls pki-types). `x509-parser` is a
# TEST-ONLY feature: the mock CA parses the Gateway's PKCS#10 CSR to issue a
# leaf. It is NOT enabled for the production build (dev-deps don't affect it).
rcgen = { workspace = true, features = ["x509-parser"] }
ssh-key = { workspace = true }
rand_core = { workspace = true }
rustls = { workspace = true }
# Raw TLS servers for the Part A rejection matrix (expired / TLS-1.2-only peers),
# and cert validity dates. tokio-rustls is pinned to tonic's transitive version.
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
time = "0.3"
# Integration tests only: throwaway credential data-dirs, and the real Debian 13
# OpenSSH node (Part D). testcontainers drives Docker; never host ssh.
tempfile = "3"
testcontainers = "0.27"
