[package]
name = "gateway"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "SessionLayer Gateway daemon (Session One scaffold): health/version surface + CP handshake smoke."
default-run = "gateway"

[lints]
workspace = true

[features]
default = []
# Propagate the io_uring reactor selection to the core library.
io-uring = ["gateway-core/io-uring"]

[dependencies]
gateway-core = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }

# Tier-0 runtime self-hardening (Session Twenty-One, NFR-5). Linux-only and
# confined to the BINARY: the enforcement never enters `gateway-core`, so the
# in-process integration tests never sandbox their own runner. Each crate
# encapsulates its own `unsafe` FFI, so the workspace `forbid(unsafe_code)` lint
# is upheld in our code.
#   * nix        — the privilege drop (setgroups/setgid/setuid via the glibc/musl
#                  all-threads `setxid` wrappers, correct under multi-thread tokio).
#   * seccompiler — a PURE-Rust seccomp-bpf assembler (no libseccomp C toolchain).
#   * landlock   — the official Rust bindings for the Landlock LSM (best-effort ABI).
#   * libc       — arch-correct `SYS_*` syscall numbers for the seccomp allow-list.
[target.'cfg(target_os = "linux")'.dependencies]
#   * user      — setgroups/setgid/setuid (the glibc/musl all-threads setxid).
#   * process   — prctl(PR_SET_DUMPABLE/PR_SET_NO_NEW_PRIVS/PR_SET_NAME) hardening.
#   * resource  — setrlimit(RLIMIT_CORE, 0) to disable coredumps.
#   * mman      — mlockall/MADV_DONTDUMP for key-buffer swap/dump hygiene (best-effort).
nix = { version = "0.31", default-features = false, features = ["user", "process", "resource", "mman"] }
seccompiler = "0.5"
landlock = "0.4"
libc = "0.2"

[[bin]]
name = "gateway"
path = "src/main.rs"

# Exercised by the cross-repo E2E smoke (scripts/e2e-smoke.sh), not unit tests.
[[bin]]
name = "handshake-smoke"
path = "src/bin/handshake-smoke.rs"

# The hardened real-binary E2E (tests/hardening_e2e.rs) spawns THIS binary with
# the full hardening profile active and drives shell/exec/sftp through it against
# a real Docker node, proving the seccomp/Landlock/egress/coredump profiles do not
# break the SSH data path. It reuses gateway-core's MockCp + node fixture via a
# `#[path]` include, so it needs gateway-core's test-support dependency set.
[dev-dependencies]
gateway-core = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
tokio-stream = { workspace = true }
tonic = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
rcgen = { workspace = true, features = ["x509-parser"] }
ssh-key = { workspace = true }
rand_core = { workspace = true }
rustls = { workspace = true }
p256 = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
aes-gcm = { workspace = true }
hmac = "0.13"
zeroize = { workspace = true }
tempfile = "3"
testcontainers = "0.27"
